# multi-agent-poc

./: README.md
backend/: README.md  main.py  pyproject.toml
backend/brief_agent/: agent.py
